exercises/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: phpmyadmin
  name: phpmyadmin
spec:
  ports:
  - port: 5080
    protocol: TCP
    targetPort: 80
  selector:
    app: phpmyadmin
status:
  loadBalancer: {}
