exercises/todo-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-app
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      #- path: /todo-app(/|$)(.*)
      - backend:
          serviceName: todo-app
          servicePort: 3000
    host: todo-app.192.168.1.15.xip.io # YOUR-SEGMENT-CHOISE.YOUR-LOCAL-IP.xip.io -> see https://xip.io
